[gd_scene load_steps=11 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://SHUWU/lifebar_foreground.png" type="Texture" id=7]
[ext_resource path="res://SHUWU/lifebar_background.png" type="Texture" id=8]
[ext_resource path="res://lifeBar.gd" type="Script" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -67.0 ]
}
mob_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.643137, 0.698039, 1, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="lifeBar" type="TextureProgress" parent="."]
margin_left = 25.0
margin_top = 38.0
margin_right = 217.0
margin_bottom = 60.0
rect_scale = Vector2( 0.8, 0.8 )
max_value = 6.0
value = 6.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="lifeBar"]
margin_left = 11.4286
margin_top = -25.7143
margin_right = 161.429
margin_bottom = -2.71429
text = "Player health:"

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="HUD"]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="health_change" from="Player" to="lifeBar" method="_on_Player_health_change"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
